library/src/libqheaderview.h

typedef struct QEvent QEvent;
typedef struct QHeaderView QHeaderView;
typedef struct QItemSelection QItemSelection;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionHeader QStyleOptionHeader;
void QHeaderView_CurrentChanged(QHeaderView* self, QModelIndex* current, QModelIndex* old);
bool QHeaderView_Event(QHeaderView* self, QEvent* e);
void QHeaderView_PaintEvent(QHeaderView* self, QPaintEvent* e);
void QHeaderView_MousePressEvent(QHeaderView* self, QMouseEvent* e);
void QHeaderView_MouseMoveEvent(QHeaderView* self, QMouseEvent* e);
void QHeaderView_MouseReleaseEvent(QHeaderView* self, QMouseEvent* e);
void QHeaderView_MouseDoubleClickEvent(QHeaderView* self, QMouseEvent* e);
bool QHeaderView_ViewportEvent(QHeaderView* self, QEvent* e);
void QHeaderView_PaintSection(const QHeaderView* self, QPainter* painter, QRect* rect, int logicalIndex);
QSize* QHeaderView_SectionSizeFromContents(const QHeaderView* self, int logicalIndex);
int QHeaderView_HorizontalOffset(const QHeaderView* self);
int QHeaderView_VerticalOffset(const QHeaderView* self);
void QHeaderView_UpdateGeometries(QHeaderView* self);
void QHeaderView_ScrollContentsBy(QHeaderView* self, int dx, int dy);
void QHeaderView_DataChanged(QHeaderView* self, QModelIndex* topLeft, QModelIndex* bottomRight, libqt_list /* of int */ roles);
void QHeaderView_RowsInserted(QHeaderView* self, QModelIndex* parent, int start, int end);
QRect* QHeaderView_VisualRect(const QHeaderView* self, QModelIndex* index);
void QHeaderView_ScrollTo(QHeaderView* self, QModelIndex* index, int hint);
QModelIndex* QHeaderView_IndexAt(const QHeaderView* self, QPoint* p);
bool QHeaderView_IsIndexHidden(const QHeaderView* self, QModelIndex* index);
QModelIndex* QHeaderView_MoveCursor(QHeaderView* self, int param1, int param2);
void QHeaderView_SetSelection(QHeaderView* self, QRect* rect, int flags);
QRegion* QHeaderView_VisualRegionForSelection(const QHeaderView* self, QItemSelection* selection);
void QHeaderView_InitStyleOptionForIndex(const QHeaderView* self, QStyleOptionHeader* option, int logicalIndex);
void QHeaderView_InitStyleOption(const QHeaderView* self, QStyleOptionHeader* option);
libqt_string QHeaderView_Tr2(const char* s, const char* c);
libqt_string QHeaderView_Tr3(const char* s, const char* c, int n);
void QHeaderView_InitializeSections(QHeaderView* self);
void QHeaderView_InitializeSections2(QHeaderView* self, int start, int end);