src/libqheaderview.bf

	[LinkName("QHeaderView_InitializeSections")]
	public static extern void QHeaderView_InitializeSections(void* c_this);
	[LinkName("QHeaderView_InitializeSections2")]
	public static extern void QHeaderView_InitializeSections2(void* c_this, int32 start, int32 end);
	[LinkName("QHeaderView_CurrentChanged")]
	public static extern void QHeaderView_CurrentChanged(void* c_this, QModelIndex current, QModelIndex old);
	[LinkName("QHeaderView_Event")]
	public static extern bool QHeaderView_Event(void* c_this, QEvent e);
	[LinkName("QHeaderView_PaintEvent")]
	public static extern void QHeaderView_PaintEvent(void* c_this, QPaintEvent e);
	[LinkName("QHeaderView_MousePressEvent")]
	public static extern void QHeaderView_MousePressEvent(void* c_this, QMouseEvent e);
	[LinkName("QHeaderView_MouseMoveEvent")]
	public static extern void QHeaderView_MouseMoveEvent(void* c_this, QMouseEvent e);
	[LinkName("QHeaderView_MouseReleaseEvent")]
	public static extern void QHeaderView_MouseReleaseEvent(void* c_this, QMouseEvent e);
	[LinkName("QHeaderView_MouseDoubleClickEvent")]
	public static extern void QHeaderView_MouseDoubleClickEvent(void* c_this, QMouseEvent e);
	[LinkName("QHeaderView_ViewportEvent")]
	public static extern bool QHeaderView_ViewportEvent(void* c_this, QEvent e);
	[LinkName("QHeaderView_PaintSection")]
	public static extern void QHeaderView_PaintSection(void* c_this, QPainter painter, QRect rect, int32 logicalIndex);
	[LinkName("QHeaderView_SectionSizeFromContents")]
	public static extern QSize QHeaderView_SectionSizeFromContents(void* c_this, int32 logicalIndex);
	[LinkName("QHeaderView_HorizontalOffset")]
	public static extern int32 QHeaderView_HorizontalOffset(void* c_this);
	[LinkName("QHeaderView_VerticalOffset")]
	public static extern int32 QHeaderView_VerticalOffset(void* c_this);
	[LinkName("QHeaderView_UpdateGeometries")]
	public static extern void QHeaderView_UpdateGeometries(void* c_this);
	[LinkName("QHeaderView_ScrollContentsBy")]
	public static extern void QHeaderView_ScrollContentsBy(void* c_this, int32 dx, int32 dy);
	[LinkName("QHeaderView_DataChanged")]
	public static extern void QHeaderView_DataChanged(void* c_this, QModelIndex topLeft, QModelIndex bottomRight, int32[] roles);
	[LinkName("QHeaderView_RowsInserted")]
	public static extern void QHeaderView_RowsInserted(void* c_this, QModelIndex parent, int32 start, int32 end);
	[LinkName("QHeaderView_VisualRect")]
	public static extern QRect QHeaderView_VisualRect(void* c_this, QModelIndex index);
	[LinkName("QHeaderView_ScrollTo")]
	public static extern void QHeaderView_ScrollTo(void* c_this, QModelIndex index, int64 hint);
	[LinkName("QHeaderView_IndexAt")]
	public static extern QModelIndex QHeaderView_IndexAt(void* c_this, QPoint p);
	[LinkName("QHeaderView_IsIndexHidden")]
	public static extern bool QHeaderView_IsIndexHidden(void* c_this, QModelIndex index);
	[LinkName("QHeaderView_MoveCursor")]
	public static extern QModelIndex QHeaderView_MoveCursor(void* c_this, int64 param1, int64 param2);
	[LinkName("QHeaderView_SetSelection")]
	public static extern void QHeaderView_SetSelection(void* c_this, QRect rect, int64 flags);
	[LinkName("QHeaderView_VisualRegionForSelection")]
	public static extern QRegion QHeaderView_VisualRegionForSelection(void* c_this, QItemSelection selection);
	[LinkName("QHeaderView_InitStyleOptionForIndex")]
	public static extern void QHeaderView_InitStyleOptionForIndex(void* c_this, QStyleOptionHeader option, int32 logicalIndex);
	[LinkName("QHeaderView_InitStyleOption")]
	public static extern void QHeaderView_InitStyleOption(void* c_this, QStyleOptionHeader option);
	[LinkName("QHeaderView_Tr2")]
	public static extern char8[] QHeaderView_Tr2(char8[] s, char8[] c);
	[LinkName("QHeaderView_Tr3")]
	public static extern char8[] QHeaderView_Tr3(char8[] s, char8[] c, int32 n);
}